samples/_failures_safe/1761425909_fb452a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_882f679f.c: In function ‘main’:
./samples/SAFE/__tmp_882f679f.c:135:13: error: expected expression at end of input
  135 |             if (!
      |             ^~
./samples/SAFE/__tmp_882f679f.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_882f679f.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_882f679f.c:135:13: error: expected declaration or statement at end of input
